ottimizzazioni, warnings